# mailwhisper

./: README.md  mailwhisper.spec  main.py  pyinstaller_guide.md  pyproject.toml
agent/: graph.py  nodes.py  schema.py  state.py
img/: app.icns
packaging/mac/: Info.plist
tests/: stt_test.py  visualize_graph.py
ui/: app.py  recorder.py
utils/: mic_mem.py  stt_whisper_mem.py
