[project]
name = "mailwhisper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "email-validator>=2.3.0",
    "ipython>=9.5.0",
    "langchain-core>=0.3.76",
    "langchain-ollama>=0.3.7",
    "langgraph>=0.6.7",
    "pydantic>=2.11.7",
]
